<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">VietA OneES®Mobility</string>
    <string name="app_name">WizPOS PDA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="license">License Key</string>
    <string name="passcode">Pass Code</string>
    <string name="username">CashierID</string>
    <string name="password">Password</string>
    <string name="author">Viet A Technology JSC</string>
    <string name="website">www.vietatech.com.vn</string>
    <string name="buildVersion">build.20240421.1337.CRY</string>
    <string name="copyright">Copyright®2015-2023</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="btnSave">&lt;- Save</string>
    <string name="btnOk">OK -></string>
    <string name="btnOkMT">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnCancelMT">Cancel</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="app_folder">Posman</string>

    <!-- Settings -->
    <string name="setting_serverip">ServerIP</string>
    <string name="setting_database">Database</string>
    <string name="setting_user">User</string>
    <string name="setting_pass">Pass</string>
    <string name="setting_storeno">StoreNo</string>
    <string name="setting_posgroup">POSGroup</string>
    <string name="setting_posid">POSId</string>
    <string name="setting_submenu">SubMenu</string>
    <string name="setting_salescode">SalesCode</string>
    <string name="setting_vat">VAT</string>
    <string name="title_activity_posmenu">POSMenuActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
